[tool.poetry]
name = "viet-lox"
version = "0.1.0"
description = ""
authors = ["Le Nguyen <lenguyen18072003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
