[tool.poetry]
name = "hi-em"
version = "0.1.0"
description = ""
authors = ["Le Nguyen <lenguyen18072003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
